<resources>
    <string name="app_name">DompetKu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="rekap">Rekap</string>
    <string name="saldo">Sisa Saldo</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="data_hari_ini">Data Hari Ini</string>
    <string name="tambah_data_keuangan">Tambah Data Keuangan</string>
    <string name="nama_transaksi">Nama Transaksi</string>
    <string name="saldo1">Saldo</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
</resources>
